# pegelhub

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  README.md  pom.xml
.github/workflows/: ci.yml  images.yml
.run/: PegelhubCoreDockerCompose.run.xml  PegelhubCoreLocalDevelopment.run.xml
connectors/: pom.xml
connectors/ftp-connector/: Dockerfile  README.md  pom.xml
connectors/icc-connector/: Dockerfile  README.md  pom.xml
connectors/iec-connector/: Dockerfile  README.md  pom.xml
connectors/ma-connector/: Dockerfile  README.md  pom.xml
connectors/ma-connector/src/main/native/: CMakeLists.txt  RevPiReader.cpp
connectors/tstp-connector/: Dockerfile  README.md  pom.xml
core/: .dockerignore  .env.example  .env.release.example  Dockerfile  README.md  docker-compose.release.yaml  docker-compose.yaml  pom.xml
core/docs/: influxdb.md  keycloak-local-dev.md  keycloak-operations.md  release-deployment.md
deploy/ansible/: README.md  ansible.cfg  staging.yml
deploy/staging/: .env.example  Caddyfile  README.md  compose.yaml
docs/adr/: 0001-use-station-timeseries-measurement-model.md  0002-write-measurements-by-timeseries-id.md  0003-use-flexible-timeseries-property-and-unit-codes.md  0004-split-technical-telemetry-from-measurements.md
docs/architecture/: pegelhub-domain-model.md  (+1 more)
pegelhub-core/: .env.example  Dockerfile  README.md  docker-compose.yaml  pom.xml
pegelhub-iec-connector/: pom.xml
pegelhub-library/: pom.xml
pegelhub-ma-connector/: Dockerfile  README.md  docker-compose.yaml  pom.xml
scripts/: worktree-clean.sh  worktree-start.sh
(+733 files in other folders)
